Fix img css so they dont stretch in the lightbox

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,9 +65,8 @@
 }
 
 #lightbox img {
-  width: 100%;
-  max-height: 540px;
-  max-width: 640px;
+  max-height: 95%;
+  max-width: 100%;
   border-radius: 0.5rem;
   box-shadow: 0 0 100px rgba(255, 255, 255, 0.2);
 
